--- a/docker/nginx/sites-enabled/phb.conf
+++ b/docker/nginx/sites-enabled/phb.conf
@@ -11,6 +11,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$args;
+		rewrite ^/(.*)$ /index.php?__path__=/$1 last;
     }
 
     location = /index.php {
