--- a/docker/nginx/sites-enabled/phb.conf
+++ b/docker/nginx/sites-enabled/phb.conf
@@ -1,6 +1,6 @@
 server {
-    server_name phabricator.docker;
-    #server_name ${SERVICE_HOST};
+    #server_name phabricator.docker;
+    server_name ${SERVICE_HOST};
     listen 80;
     root /var/www/phabricator/phabricator/webroot;
     charset utf-8;
